public/css/styles.css
html {
  max-height: 100vh;
  overflow-y: hidden;
}

body {
  height: 100%;
  font-family: "Montserrat", sans-serif;
  letter-spacing: 0.2px;
  color: #182a4e;
  background-color: #222831;
  padding: 1%;
  margin-bottom: 0;
  overflow-x: auto;
}

nav {
  display: flex;
  justify-content: center;
  align-items: center;
}

#logo {
  flex: 5;
  color: white;
  font-size: 32px;
  font-weight: 600;
}

links {
  flex: 1;
  display: flex;
}

#link {
  flex: 2;
}

a {
  text-decoration: none;
  color: white;
  font-size: 20px;
}

#board {
  display: flex;
  position: absolute;
  margin-top: 8px;
  flex-direction: row;
  align-items: flex-start;
  overflow-x: auto;
  left: 0;
  right: 0;
  padding-left: 1%;
  padding-right: 1%;
}

input {
  width: 100%;
  padding: 8px 20px;
  margin: 6px 0;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

.todo-list-container {
  display: flex;
  flex-direction: column;
  border-radius: 5px;
  padding: 0.3% 1%;
  margin: 0px 5px 40px;
  min-width: 272px;
  max-width: 272px;
  max-height: 77vh;
  background-color: #eaecf1;
  box-shadow: 0 2.8px 2.2px rgba(0.3, 0.3, 0.3, 0.15);
}

.add-list {
  margin-top: 0;
  width: 272px;
  margin-right: 5%;
}
.add-list:hover {
  background-color: #d5dade;
}

.add-card {
  background-color: #ebecf0;
  border: none;
  margin-top: 0;
}

.add-card:hover {
  background-color: #d5dade;
}

.todos {
  overflow-y: auto;
  margin-bottom: 5%;
}

.todo-card {
  flex-direction: row;
  align-items: center;
  margin-bottom: 9px;
  padding: 0% 3%;
  flex: 1;
  border-radius: 5px;
  background-color: white;
  box-shadow: 0 2.8px 2.2px rgba(0.3, 0.3, 0.3, 0.15);
  cursor: pointer;
}

.todo-card:hover {
  background-color: #f4f5f7;
}

.targeted {
  background-color: #fc5185;
  color: white;
}

.targeted:hover {
  background-color: #fc5185;
  color: white;
}

.todo-content {
  display: flex;
  flex-direction: row;
}

.todo-description {
  flex: 6;
  margin-right: 2%;
  font-size: 12px;
}

input[type="checkbox"] {
  flex: 1;
  align-self: center;
  margin-right: 2px;
}

.flaticons {
  padding: 0;
  flex: 1;
  margin: 0;
  align-self: center;
}

img {
  padding: 0;
  margin: 0;
  width: 10px; /* you can use % */
  height: auto;
}

img:hover {
  opacity: 0.5;
}

.completed-tag {
  color: red;
  font-size: 12px;
}

.list-header {
  display: flex;
  direction: row;
  padding: 0;
  position: relative;
}

.list-name {
  flex: 10;
}

.list-popup {
  text-align: center;
  vertical-align: top;
  line-height: 1;
  cursor: pointer;
}
.modal {
  display: none;
}

.modal-styles {
  border-radius: 5px;
  border: 1px solid #dfe2e7;
  font-size: 12px;
  position: absolute;
  width: 272px;
  top: 38px;
  left: 259px;
  background-color: #ffffff;
  box-shadow: 0 2.8px 2.2px rgba(0.3, 0.3, 0.3, 0.15);
}

#modal-title {
  font-weight: 500;
  text-align: center;
  margin: 12px;
}

span {
  border-bottom: solid 1px #dfe2e7;
}

.delete-list {
  padding: 5px;
  cursor: pointer;
}

.delete-list:hover {
  background-color: #f7f7f7;
}

#create-list-btn {
  margin-top: 30px;
  margin-bottom: 0px;
  background-color: #00adb5;
  border-radius: 5px;
  padding: 12px 10px;
  border: none;
  color: white;
  box-shadow: 0 2.8px 2.2px rgba(0.5, 1.5, 1, 1);
}

#target-list {
  display: flex;
  align-items: flex-end;
  width: 150px;
}

#create-list-btn {
  margin-top: 30px;
  margin-bottom: 0px;
  background-color: #00adb5;
  border-radius: 5px;
  padding: 12px 10px;
  border: none;
  color: white;
  box-shadow: 0 2.8px 2.2px rgba(0.5, 1.5, 1, 1);
  min-width: 100px;
}

#create-list-btn:hover {
  box-shadow: 0 5px 15px rgba(0, 173, 181, 0.4);
}

#target-list > input {
  height: 40px;
}

#target-list > button {
  height: 40px;
}

